--- a/misp42splunk/default/collections.conf
+++ b/misp42splunk/default/collections.conf
@@ -17,7 +17,7 @@ field.misp_size_in_bytes = string
 field.misp_tag = string
 field.misp_text = string
 field.misp_timestamp = number
-field.misp_to_ids = boolean
+field.misp_to_ids = string
 field.misp_attribute_id = string
 field.misp_attribute_uuid = string
 replicate = false
@@ -39,7 +39,7 @@ field.misp_orgc_id = number
 field.misp_tag = string
 field.misp_text = string
 field.misp_timestamp = number
-field.misp_to_ids = boolean
+field.misp_to_ids = string
 field.misp_attribute_id = string
 field.misp_attribute_uuid = string
 replicate = false
@@ -59,7 +59,7 @@ field.misp_orgc_id = number
 field.misp_tag = string
 field.misp_text = string
 field.misp_timestamp = number
-field.misp_to_ids = boolean
+field.misp_to_ids = string
 field.misp_attribute_id = string
 field.misp_attribute_uuid = string
 replicate = false
