--- a/misp42splunk/default/restmap.conf
+++ b/misp42splunk/default/restmap.conf
@@ -1,8 +1,8 @@
-[admin:myendpoint]
-match=/misp
-members=customendpoint
+#[admin:myendpoint]
+#match=/misp
+#members=misp42splunk
 
-[admin_external:customendpoint]
+[admin_external:misp42splunk]
 handlertype = python
 handlerfile = misp_setup_handler.py
 handleractions = list, edit
