--- a/misp42splunk/default/savedsearches.conf
+++ b/misp42splunk/default/savedsearches.conf
@@ -15,10 +15,9 @@ display.visualizations.show = 0
 enableSched = 0
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=y getorg=y geteventtag=y pipesplit=y \ type="filename,md5,sha1,sha256,sha512,ssdeep,filename|md5,filename|sha1,filename|sha256,filename|sha512,filename|ssdeep" \ 
-| where isnotnull(misp_filename) or isnotnull(misp_md5) or isnotnull(misp_sha1) or isnotnull(misp_sha256) or isnotnull(misp_sha512) or isnotnull(misp_ssdeep) \
+search = | mispgetioc last=1d getuuid=t getorg=t geteventtag=t pipesplit=t type="filename,md5,sha1,sha256,sha512,ssdeep,filename|md5,filename|sha1,filename|sha256,filename|sha512,filename|ssdeep" \
+| where isnotnull(misp_filename) or isnotnull(misp_md5) or isnotnull(misp_sha1) or isnotnull(misp_sha256) or isnotnull(misp_sha512) or isnotnull(misp_ssdeep)\
 | outputlookup MISP_filename append=true
-
 
 # http://docs.splunk.com/Documentation/CIM/4.12.0/User/Web
 [MISP_getioc_web_object_last1d]
@@ -37,8 +36,7 @@ display.visualizations.show = 0
 enableSched = 0
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=y getorg=y pipesplit=y geteventtag=y \
-type="domain,ip-dst,ip-src,url,user_agent,domain|ip" \
+search = | mispgetioc last=1d getuuid=t getorg=t pipesplit=t geteventtag=t type="domain,ip-dst,ip-src,url,user_agent,domain|ip" \
 | where isnotnull(misp_domain) or isnotnull(misp_ip_dst) or isnotnull(misp_ip_src) or isnotnull(misp_url) or isnotnull(misp_user_agent) \
 | eval misp_user_agent_length=if(isnotnull(misp_user_agent),len(misp_user_agent),'') \
 | outputlookup MISP_web append=true
@@ -61,10 +59,6 @@ display.visualizations.show = 0
 enableSched = 0
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=y getorg=y geteventtag=y type="email-attachment,email-src,email-src-display-name,email-subject" \
+search = | mispgetioc last=1d getuuid=t getorg=t geteventtag=t type="email-attachment,email-src,email-src-display-name,email-subject" \
 | where isnotnull(misp_email_attachment) or isnotnull(misp_email_src) or isnotnull(misp_email_src_display_name) or isnotnull(misp_email_subject) \
 | outputlookup MISP_email append=true
-
-
-
-
