--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -28,7 +28,8 @@ is_configured = 0
 # build = 2019.02.06.v2.1.1 - #56
 # build = 2019.02.13.v2.1.2 - savedsearches
 # build = 2019.02.16.v2.1.3 - to_ids filter fixed #59
-build = 2019.02.16.v2.1.3
+# build = 2019.02.16.v2.1.4 - dedicated custom endpoint
+build = 2019.02.16.v2.1.4
 
 [ui]
 is_visible = true
@@ -37,7 +38,7 @@ label = MISP42
 [launcher]
 author = Remi Seguy
 description = MISP App for Splunk
-version = 2.1.3
+version = 2.1.4
 
 [package]
 id = misp42splunk
