--- a/misp42splunk/default/savedsearches.conf
+++ b/misp42splunk/default/savedsearches.conf
@@ -1,5 +1,5 @@
 # http://docs.splunk.com/Documentation/CIM/4.12.0/User/Malware
-[MISP_getioc_filename-related_last1d]
+[MISP_getioc_filename_related_last1d_to_KV_MISP_filename]
 action.email.useNSSubject = 1
 alert.track = 0
 cron_schedule = 0 0 * * *
@@ -20,7 +20,7 @@ search = | mispgetioc last=1d getuuid=t getorg=t geteventtag=t pipesplit=t type=
 | outputlookup MISP_filename append=true
 
 # http://docs.splunk.com/Documentation/CIM/4.12.0/User/Web
-[MISP_getioc_web_object_last1d]
+[MISP_getioc_web_related_last1d_to_KV_MISP_web]
 action.email.useNSSubject = 1
 alert.track = 0
 cron_schedule = 5 0 * * *
@@ -43,7 +43,7 @@ search = | mispgetioc last=1d getuuid=t getorg=t pipesplit=t geteventtag=t type=
 
 
 # http://docs.splunk.com/Documentation/CIM/4.12.0/User/Email
-[MISP_getioc_email_object_last1d]
+[MISP_getioc_email_related_last1d_to_KV_MISP_email]
 action.email.useNSSubject = 1
 alert.track = 0
 cron_schedule = 3 0 * * *
@@ -62,3 +62,86 @@ request.ui_dispatch_view = search
 search = | mispgetioc last=1d getuuid=t getorg=t geteventtag=t type="email-attachment,email-src,email-src-display-name,email-subject" \
 | where isnotnull(misp_email_attachment) or isnotnull(misp_email_src) or isnotnull(misp_email_src_display_name) or isnotnull(misp_email_subject) \
 | outputlookup MISP_email append=true
+
+
+[MISP_email_intel_last1d]
+action.email.useNSSubject = 1
+alert.track = 0
+dispatch.earliest_time = -24h@h
+dispatch.latest_time = now
+display.general.timeRangePicker.show = 0
+display.general.type = statistics
+display.page.search.mode = verbose
+display.page.search.tab = statistics
+display.visualizations.show = 0
+request.ui_dispatch_app = misp42splunk
+request.ui_dispatch_view = search
+search = | mispgetioc last=1d to_ids=t geteventtag=t type="email-src,email-subject" \
+| where isnotnull(misp_email_src) or isnotnull(misp_email_subject) \
+| eval weight=case(match(misp_tag,"tlp:white"),20,match(misp_tag,"tlp:green"),40,match(misp_tag,"tlp:amber"),80,match(misp_tag,"tlp:red"),100,true(),50)\
+| eval description = "MISP e" + misp_event_id | rename misp_email_src AS src_user misp_email_subject AS subject \
+| where isnotnull(src_user) or isnotnull(subject) | fields description,src_user,subject,weight \
+| outputlookup misp_email_intel.csv
+
+[MISP_file_intel_last1d]
+action.email.useNSSubject = 1
+alert.track = 0
+dispatch.earliest_time = -24h@h
+dispatch.latest_time = now
+display.general.timeRangePicker.show = 0
+display.general.type = statistics
+display.page.search.mode = verbose
+display.page.search.tab = statistics
+display.visualizations.show = 0
+request.ui_dispatch_app = misp42splunk
+request.ui_dispatch_view = search
+search = | mispgetioc last=1d geteventtag=t pipesplit=t type="filename,md5,sha1,sha256,sha512,ssdeep,filename|md5,filename|sha1,filename|sha256,filename|sha512,filename|ssdeep"\
+| eval description = "e" + misp_event_id + " on " + misp_filename + " hash(es):" \
+| eval description=if(isnotnull(misp_md5),description + "md5,",description)\
+| eval description=if(isnotnull(misp_sha1),description + "sha1,",description)\
+| eval description=if(isnotnull(misp_sha256),description + "sha256,",description)\
+| eval description=if(isnotnull(misp_sha512),description + "sha512,",description)\
+| eval description=if(isnotnull(misp_ssdeep),description + "ssdeep",description)\
+| eval file_hash=mvappend(misp_md5, misp_sha1, misp_sha256, misp_sha512, misp_ssdeep) | mvexpand file_hash\
+| rename misp_filename AS file_name | where isnotnull(file_name) or isnotnull(file_hash) \
+| eval weight=case(match(misp_tag,"tlp:white"),20,match(misp_tag,"tlp:green"),40,match(misp_tag,"tlp:amber"),80,match(misp_tag,"tlp:red"),100,true(),50)\
+| where isnotnull(file_hash) or isnotnull(file_name) | fields description,file_hash,file_name,weight\
+| outputlookup misp_file_intel.csv
+
+[MISP_http_intel_last1d]
+action.email.useNSSubject = 1
+alert.track = 0
+dispatch.earliest_time = -24h@h
+dispatch.latest_time = now
+display.general.timeRangePicker.show = 0
+display.general.type = statistics
+display.page.search.mode = verbose
+display.page.search.tab = statistics
+display.visualizations.show = 0
+request.ui_dispatch_app = misp42splunk
+request.ui_dispatch_view = search
+search = | mispgetioc last=1d to_ids=t geteventtag=t type="url,user_agent"\
+| eval description = "MISP e" + misp_event_id | rename misp_user_agent AS http_user_agent, misp_url AS url\
+| eval weight=case(match(misp_tag,"tlp:white"),20,match(misp_tag,"tlp:green"),40,match(misp_tag,"tlp:amber"),80,match(misp_tag,"tlp:red"),100,true(),50)\
+| where isnotnull(url) or isnotnull(http_user_agent)| fields description,http_referrer,http_user_agent,url,weight\
+| outputlookup misp_http_intel.csv
+
+[MISP_ip_intel_last1d]
+action.email.useNSSubject = 1
+alert.track = 0
+dispatch.earliest_time = -24h@h
+dispatch.latest_time = now
+display.general.timeRangePicker.show = 0
+display.general.type = statistics
+display.page.search.mode = verbose
+display.page.search.tab = statistics
+display.visualizations.show = 0
+request.ui_dispatch_app = misp42splunk
+request.ui_dispatch_view = search
+search = | mispgetioc last=1d to_ids=t geteventtag=t pipesplit=t type="domain,ip-dst,ip-src,domain|ip"\
+| eval description = "MISP e" + misp_event_id | rename misp_domain AS domain\
+| eval ip = mvappend(misp_ip_dst,misp_ip_src) |mvexpand ip\
+| eval weight=case(match(misp_tag,"tlp:white"),20,match(misp_tag,"tlp:green"),40,match(misp_tag,"tlp:amber"),80,match(misp_tag,"tlp:red"),100,true(),50)\
+| where isnotnull(ip) or isnotnull(domain) | fields description,domain,ip,weight\
+| outputlookup misp_ip_intel.csv
+
