--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -30,7 +30,8 @@ is_configured = 0
 # build = 2019.02.16.v2.1.3 - to_ids filter fixed #59
 # build = 2019.02.16.v2.1.4 - dedicated custom endpoint
 # build = 2019.02.16.v2.1.5 - fix collections
-build = 2019.02.16.v2.1.5
+# build = 2019.02.19.v2.1.6 - enforceWarninglist
+build = 2019.02.19.v2.1.6
 
 [ui]
 is_visible = true
@@ -39,7 +40,7 @@ label = MISP42
 [launcher]
 author = Remi Seguy
 description = MISP App for Splunk
-version = 2.1.5
+version = 2.1.6
 
 [package]
 id = misp42splunk
