--- a/misp42splunk/default/searchbnf.conf
+++ b/misp42splunk/default/searchbnf.conf
@@ -19,7 +19,7 @@ tags = misp
 
 [mispgetioc-options]
 syntax = ( eventid=<int>(,<int>)* |  last=<int>(d|h|m) | date_from=<string> (date_to=<string>) ) \
-  to_ids=<bool> category=<string> type=<string> pipesplit=<bool>\
+  to_ids=<bool> warning_list=<bool> category=<string> type=<string> pipesplit=<bool>\
   published=<bool> getuuid=<bool> add_description=<bool> getorg=<bool> geteventtag=<bool> \
   tags=<string>  not_tags=<string> misp_instance=<string> \
   misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<bool>
