--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -31,7 +31,9 @@ is_configured = 0
 # build = 2019.02.16.v2.1.4 - dedicated custom endpoint
 # build = 2019.02.16.v2.1.5 - fix collections
 # build = 2019.02.19.v2.1.6 - enforceWarninglist
-build = 2019.02.19.v2.1.6
+# build = 2019.02.26.v2.1.7 - support eventid = uuid
+build = 2019.02.26.v2.1.7
+
 
 [ui]
 is_visible = true
@@ -40,7 +42,7 @@ label = MISP42
 [launcher]
 author = Remi Seguy
 description = MISP App for Splunk
-version = 2.1.6
+version = 2.1.7
 
 [package]
 id = misp42splunk
