--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -32,8 +32,8 @@ is_configured = 0
 # build = 2019.02.16.v2.1.5 - fix collections
 # build = 2019.02.19.v2.1.6 - enforceWarninglist
 # build = 2019.02.26.v2.1.7 - support eventid = uuid
-build = 2019.02.26.v2.1.7
-
+# build = 2019.02.27.v2.1.8 - #66 commands.conf
+build = 2019.02.27.v2.1.8
 
 [ui]
 is_visible = true
@@ -42,7 +42,7 @@ label = MISP42
 [launcher]
 author = Remi Seguy
 description = MISP App for Splunk
-version = 2.1.7
+version = 2.1.8
 
 [package]
 id = misp42splunk
