--- a/misp42splunk/default/commands.conf
+++ b/misp42splunk/default/commands.conf
@@ -1,15 +1,39 @@
 [mispgetioc]
 filename = mispgetioc.py
 local = true
+enableheader = true
+outputheader = true
+requires_srinfo = true
+supports_getinfo = true
+supports_multivalues = true
+supports_rawargs = true 
 
 [mispsearch]
 filename = mispsearch.py
 local = true
+enableheader = true
+outputheader = true
+requires_srinfo = true
+supports_getinfo = true
+supports_multivalues = true
+supports_rawargs = true 
 
 [mispsight]
 filename = mispsight.py
 local = true
+enableheader = true
+outputheader = true
+requires_srinfo = true
+supports_getinfo = true
+supports_multivalues = true
+supports_rawargs = true
 
 [mispapireport]
 filename = mispapireport.py
 local = true
+enableheader = true
+outputheader = true
+requires_srinfo = true
+supports_getinfo = true
+supports_multivalues = true
+supports_rawargs = true 
