--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -33,7 +33,8 @@ is_configured = 0
 # build = 2019.02.19.v2.1.6 - enforceWarninglist
 # build = 2019.02.26.v2.1.7 - support eventid = uuid
 # build = 2019.02.27.v2.1.8 - #66 commands.conf
-build = 2019.02.27.v2.1.8
+# build = 2019.03.02.v2.2.0 - client cert
+build = 2019.03.02.v2.2.0
 
 [ui]
 is_visible = true
@@ -42,7 +43,7 @@ label = MISP42
 [launcher]
 author = Remi Seguy
 description = MISP App for Splunk
-version = 2.1.8
+version = 2.2.0
 
 [package]
 id = misp42splunk
