--- a/misp42splunk/default/misp.conf
+++ b/misp42splunk/default/misp.conf
@@ -3,5 +3,7 @@ misp_url = https://misp.local
 misp_key = ***API*KEY***
 misp_verifycert = 1
 misp_use_proxy = 0
+client_use_cert = 0
+client_cert_full_path = /path/to/client/certificate/for/default/instance
 http_proxy = 
 https_proxy = 
