--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -34,7 +34,8 @@ is_configured = 0
 # build = 2019.02.26.v2.1.7 - support eventid = uuid
 # build = 2019.02.27.v2.1.8 - #66 commands.conf
 # build = 2019.03.02.v2.2.0 - client cert
-build = 2019.03.02.v2.2.0
+# build = 2019.03.20.v2.2.1 - #70 fix missing cert when editing event
+build = 2019.03.20.v2.2.1
 
 [ui]
 is_visible = true
@@ -43,7 +44,7 @@ label = MISP42
 [launcher]
 author = Remi Seguy
 description = MISP App for Splunk
-version = 2.2.0
+version = 2.2.1
 
 [package]
 id = misp42splunk
