--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -35,7 +35,8 @@ is_configured = 0
 # build = 2019.02.27.v2.1.8 - #66 commands.conf
 # build = 2019.03.02.v2.2.0 - client cert
 # build = 2019.03.20.v2.2.1 - #70 fix missing cert when editing event
-build = 2019.03.20.v2.2.1
+# build = 2019.04.07.v2.2.2 - #73 fix ThreatLevel
+build = 2019.04.07.v2.2.2
 
 [ui]
 is_visible = true
@@ -44,7 +45,7 @@ label = MISP42
 [launcher]
 author = Remi Seguy
 description = MISP App for Splunk
-version = 2.2.1
+version = 2.2.2
 
 [package]
 id = misp42splunk
