fixed mv fields for sighting

--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -36,7 +36,8 @@ is_configured = 0
 # build = 2019.03.02.v2.2.0 - client cert
 # build = 2019.03.20.v2.2.1 - #70 fix missing cert when editing event
 # build = 2019.04.07.v2.2.2 - #73 fix ThreatLevel
-build = 2019.04.07.v2.2.2
+# build = 2019.04.09.v2.2.3 - #74 multi-values sighting
+build = 2019.04.09.v2.2.3
 
 [ui]
 is_visible = true
@@ -45,7 +46,7 @@ label = MISP42
 [launcher]
 author = Remi Seguy
 description = MISP App for Splunk
-version = 2.2.2
+version = 2.2.3
 
 [package]
 id = misp42splunk
