--- a/misp42splunk/default/searchbnf.conf
+++ b/misp42splunk/default/searchbnf.conf
@@ -21,7 +21,7 @@ tags = misp
 syntax = ( eventid=<string>(,<string>)* |  last=<int>(d|h|m) | date_from=<string> (date_to=<string>) ) \
   to_ids=<bool> warning_list=<bool> category=<string> type=<string> pipesplit=<bool>\
   published=<bool> getuuid=<bool> add_description=<bool> getorg=<bool> geteventtag=<bool> \
-  tags=<string>  not_tags=<string> misp_instance=<string> \
+  tags=<string>  not_tags=<string> threat_level_id=<int> misp_instance=<string> \
   misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<bool>
 description = mispgetioc searches in MISP instance \
   Another MISP instance from lookups/misp_instances.csv can be used with field misp_instance \
