Fix object distribution

--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -37,7 +37,8 @@ is_configured = 0
 # build = 2019.03.20.v2.2.1 - #70 fix missing cert when editing event
 # build = 2019.04.07.v2.2.2 - #73 fix ThreatLevel
 # build = 2019.04.09.v2.2.3 - #74 multi-values sighting
-build = 2019.04.09.v2.2.3
+# build = 2019.04.16.v2.2.4 - see release note
+build = 2019.04.16.v2.2.4
 
 [ui]
 is_visible = true
@@ -46,7 +47,7 @@ label = MISP42
 [launcher]
 author = Remi Seguy
 description = MISP App for Splunk
-version = 2.2.3
+version = 2.2.4
 
 [package]
 id = misp42splunk
