--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -8,6 +8,7 @@ build = 5
 [launcher]
 author = Remi Seguy
 version = 3.0.0
+description = App to connect (push/pull) to MISP instances
 
 [ui]
 is_visible = 1
