--- a/misp42splunk/default/savedsearches.conf
+++ b/misp42splunk/default/savedsearches.conf
@@ -15,7 +15,7 @@ display.visualizations.show = 0
 enableSched = 0
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=t getorg=t geteventtag=t pipesplit=t type="filename,md5,sha1,sha256,sha512,ssdeep,filename|md5,filename|sha1,filename|sha256,filename|sha512,filename|ssdeep" \
+search = | mispgetioc misp_instance=default_misp last=1d getuuid=t getorg=t geteventtag=t pipesplit=t type="filename,md5,sha1,sha256,sha512,ssdeep,filename|md5,filename|sha1,filename|sha256,filename|sha512,filename|ssdeep" \
 | where isnotnull(misp_filename) or isnotnull(misp_md5) or isnotnull(misp_sha1) or isnotnull(misp_sha256) or isnotnull(misp_sha512) or isnotnull(misp_ssdeep)\
 | outputlookup MISP_filename append=true
 
@@ -36,7 +36,7 @@ display.visualizations.show = 0
 enableSched = 0
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=t getorg=t pipesplit=t geteventtag=t type="domain,ip-dst,ip-src,url,user_agent,domain|ip" \
+search = | mispgetioc misp_instance=default_misp last=1d getuuid=t getorg=t pipesplit=t geteventtag=t type="domain,ip-dst,ip-src,url,user_agent,domain|ip" \
 | where isnotnull(misp_domain) or isnotnull(misp_ip_dst) or isnotnull(misp_ip_src) or isnotnull(misp_url) or isnotnull(misp_user_agent) \
 | eval misp_user_agent_length=if(isnotnull(misp_user_agent),len(misp_user_agent),'') \
 | outputlookup MISP_web append=true
@@ -59,7 +59,7 @@ display.visualizations.show = 0
 enableSched = 0
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=t getorg=t geteventtag=t type="email-attachment,email-src,email-src-display-name,email-subject" \
+search = | mispgetioc misp_instance=default_misp last=1d getuuid=t getorg=t geteventtag=t type="email-attachment,email-src,email-src-display-name,email-subject" \
 | where isnotnull(misp_email_attachment) or isnotnull(misp_email_src) or isnotnull(misp_email_src_display_name) or isnotnull(misp_email_subject) \
 | outputlookup MISP_email append=true
 
@@ -76,7 +76,7 @@ display.page.search.tab = statistics
 display.visualizations.show = 0
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
-search = | mispgetioc last=1d to_ids=t geteventtag=t type="email-src,email-subject" \
+search = | mispgetioc misp_instance=default_misp last=1d to_ids=t geteventtag=t type="email-src,email-subject" \
 | where isnotnull(misp_email_src) or isnotnull(misp_email_subject) \
 | eval weight=case(match(misp_tag,"tlp:white"),20,match(misp_tag,"tlp:green"),40,match(misp_tag,"tlp:amber"),80,match(misp_tag,"tlp:red"),100,true(),50)\
 | eval description = "MISP e" + misp_event_id | rename misp_email_src AS src_user misp_email_subject AS subject \
@@ -95,7 +95,7 @@ display.page.search.tab = statistics
 display.visualizations.show = 0
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
-search = | mispgetioc last=1d geteventtag=t pipesplit=t type="filename,md5,sha1,sha256,sha512,ssdeep,filename|md5,filename|sha1,filename|sha256,filename|sha512,filename|ssdeep"\
+search = | mispgetioc misp_instance=default_misp last=1d geteventtag=t pipesplit=t type="filename,md5,sha1,sha256,sha512,ssdeep,filename|md5,filename|sha1,filename|sha256,filename|sha512,filename|ssdeep"\
 | eval description = "e" + misp_event_id + " on " + misp_filename + " hash(es):" \
 | eval description=if(isnotnull(misp_md5),description + "md5,",description)\
 | eval description=if(isnotnull(misp_sha1),description + "sha1,",description)\
@@ -120,7 +120,7 @@ display.page.search.tab = statistics
 display.visualizations.show = 0
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
-search = | mispgetioc last=1d to_ids=t geteventtag=t type="url,user_agent"\
+search = | mispgetioc misp_instance=default_misp last=1d to_ids=t geteventtag=t type="url,user_agent"\
 | eval description = "MISP e" + misp_event_id | rename misp_user_agent AS http_user_agent, misp_url AS url\
 | eval weight=case(match(misp_tag,"tlp:white"),20,match(misp_tag,"tlp:green"),40,match(misp_tag,"tlp:amber"),80,match(misp_tag,"tlp:red"),100,true(),50)\
 | where isnotnull(url) or isnotnull(http_user_agent)| fields description,http_referrer,http_user_agent,url,weight\
@@ -138,7 +138,7 @@ display.page.search.tab = statistics
 display.visualizations.show = 0
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
-search = | mispgetioc last=1d to_ids=t geteventtag=t pipesplit=t type="domain,ip-dst,ip-src,domain|ip"\
+search = | mispgetioc misp_instance=default_misp last=1d to_ids=t geteventtag=t pipesplit=t type="domain,ip-dst,ip-src,domain|ip"\
 | eval description = "MISP e" + misp_event_id | rename misp_domain AS domain\
 | eval ip = mvappend(misp_ip_dst,misp_ip_src) |mvexpand ip\
 | eval weight=case(match(misp_tag,"tlp:white"),20,match(misp_tag,"tlp:green"),40,match(misp_tag,"tlp:amber"),80,match(misp_tag,"tlp:red"),100,true(),50)\
