fix cloud requirements

--- a/misp42splunk/default/collections.conf
+++ b/misp42splunk/default/collections.conf
@@ -1,10 +1,10 @@
-# http://docs.splunk.com/Documentation/CIM/4.12.0/User/Malware
+# http://docs.splunk.com/Documentation/CIM/4.13.0/User/Malware
 [kvmisp_filename]
-field.misp_filename = string
 field.misp_category = string
 field.misp_datetime = string
 field.misp_description = string
 field.misp_event_id = number
+field.misp_filename = string
 field.misp_malware_sample = string
 field.misp_md5 = string
 field.misp_object_id = number
@@ -22,37 +22,38 @@ field.misp_attribute_id = string
 field.misp_attribute_uuid = string
 replicate = false
 
-# http://docs.splunk.com/Documentation/CIM/4.12.0/User/Web
+# http://docs.splunk.com/Documentation/CIM/4.13.0/User/Web
 [kvmisp_web]
-field.misp_domain = string
-field.misp_user_agent = string
-field.misp_user_agent_length = number
-field.misp_ip_dst = string
-field.misp_ip_src = string
-field.misp_url = string
 field.misp_category = string
 field.misp_datetime = string
 field.misp_description = string
+field.misp_domain = string
 field.misp_event_id = number
+field.misp_hostname = string
+field.misp_ip_dst = string
+field.misp_ip_src = string
 field.misp_object_id = number
 field.misp_orgc_id = number
 field.misp_tag = string
 field.misp_text = string
 field.misp_timestamp = number
 field.misp_to_ids = string
+field.misp_url = string
+field.misp_user_agent = string
+field.misp_user_agent_length = number
 field.misp_attribute_id = string
 field.misp_attribute_uuid = string
 replicate = false
 
-# http://docs.splunk.com/Documentation/CIM/4.12.0/User/Email
+# http://docs.splunk.com/Documentation/CIM/4.13.0/User/Email
 [kvmisp_email]
+field.misp_category = string
+field.misp_datetime = string
+field.misp_description = string
 field.misp_email_attachment = string
 field.misp_email_src = string
 field.misp_email_src_display_name = string
 field.misp_email_subject = string
-field.misp_category = string
-field.misp_datetime = string
-field.misp_description = string
 field.misp_event_id = number
 field.misp_object_id = number
 field.misp_orgc_id = number
