--- a/misp42splunk/default/searchbnf.conf
+++ b/misp42splunk/default/searchbnf.conf
@@ -43,16 +43,17 @@ description = search in MISP for attributes having the value of field -
 example1 = | mispsearch field=clientip
 comment1 = retrieve attributes properties (attribute uuid, event_id, type, category, to_ids flag) for matching values of field clientip 
 example2 = | mispsearch field=clientip onlyids=y gettag=y
-comment2 = same as example 1 with attribute tag(s) if any  
+comment2 = same as example 1 with attribute tag(s) if any
+example3 = ... | field ip | mispsearch field=ip misp_instance=ops json_request="{\"returnFormat\": \"json\", \"withAttachments\": \"false\", \"includeEventUuid\": \"true\", \"includeEventTags\": \"true\"}"
+comment3 = use a JSON request body for customised search.  
 
 [mispsearch-options]
-syntax = field=<string>) onlyids=<bool> gettag=<bool> misp_instance=<string> \
-  misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<bool>
+syntax = field=<string> misp_instance=<string> onlyids=<bool> gettag=<bool> \
+  json_request=<string> includeEventUuid=<bool> includeEventTags=<bool>
 description = mispsearch takes the value of fieldname and searches in MISP instance for matching attributes.\
-  Another MISP instance from lookups/misp_instances.csv can be used with field misp_instance \
-  MISP instance settings can be overwritten using (misp_url, misp_key, misp_verifycert).\
   You can filter on 'to_ids' flag\
   You may display the attribuite tag(s) (gettag=y default=n)
+  You can provide a complete JSON request body using json_request
 
 ##################
 # mispsight
