--- a/misp42splunk/default/searchbnf.conf
+++ b/misp42splunk/default/searchbnf.conf
@@ -51,8 +51,8 @@ comment3 = use a JSON request body for customised search.
 syntax = field=<string> misp_instance=<string> onlyids=<bool> gettag=<bool> \
   json_request=<string> includeEventUuid=<bool> includeEventTags=<bool>
 description = mispsearch takes the value of fieldname and searches in MISP instance for matching attributes.\
-  You can filter on 'to_ids' flag\
-  You may display the attribuite tag(s) (gettag=y default=n)
+  You can filter on 'to_ids' flag \
+  You may display the attribuite tag(s) (gettag=y default=n) \
   You can provide a complete JSON request body using json_request
 
 ##################
@@ -73,7 +73,7 @@ syntax = field=<string> onlyids=<bool> gettag=<bool> misp_instance=<string> \
 description = mispsight takes the value of fieldname and searches in MISP instance for matching attributes.\
   Another MISP instance from lookups/misp_instances.csv can be used with field misp_instance \
   MISP instance settings can be overwritten using (misp_url, misp_key, misp_verifycert).\
-  You can filter on 'to_ids' flag\
+  You can filter on 'to_ids' flag \
   You may display the attribuite tag(s) (gettag=y default=n)
 
 
