--- a/misp42splunk/default/commands.conf
+++ b/misp42splunk/default/commands.conf
@@ -9,7 +9,6 @@ supports_getinfo = true
 supports_multivalues = true
 supports_rawargs = true 
 
-
 [mispsearch]
 filename = mispsearch.py
 passauth = true
@@ -36,6 +35,17 @@ supports_rawargs = true
 filename = mispapireport.py
 passauth = true
 local = true
+enableheader = true
+outputheader = true
+requires_srinfo = true
+supports_getinfo = true
+supports_multivalues = true
+supports_rawargs = true 
+
+[mispgetevent]
+filename = mispgetevent.py
+local = true
+run_in_preview = false
 enableheader = true
 outputheader = true
 requires_srinfo = true
