--- a/misp42splunk/default/searchbnf.conf
+++ b/misp42splunk/default/searchbnf.conf
@@ -18,11 +18,10 @@ related = misp
 tags = misp
 
 [mispgetioc-options]
-syntax = eventid=<string> last=<string> date_from=<string> date_to=<string> \
-  to_ids=<bool> category=<string> type=<string> pipesplit=<bool> \
-  published=<bool> getuuid=<bool> add_description=<bool> getorg=<bool> geteventtag=<bool> \
-  tags=<string> not_tags=<string> misp_instance=<string> \
-  warning_list=<bool> 
+syntax = misp_instance=<string> json_request=<string> eventid=<string> last=<string> date=<string> \
+  page=<int> limit=<int> type=<string> category=<string> tags=<string> not_tags=<string> \
+  warning_list=<bool> to_ids=<bool> geteventtag=<bool> threat_level=<int> getuuid=<bool> \
+  getorg=<bool> pipesplit=<bool> add_description=<bool>
 description = mispgetioc searches in MISP instance \
   Define your MISP instances as inputs. \
   You can filter on 'category' or 'type' of attributes, on attributes having the 'to_ids' flag\
@@ -79,37 +78,34 @@ description = mispsight takes the value of fieldname and searches in MISP instan
   You can filter on 'to_ids' flag \
   You may display the attribuite tag(s) (gettag=y default=n)
 
-
 ##################
-# mispapireport
+# mispgetevent
 ##################
-[mispapireport-command]
-syntax = |mispapireport <mispapireport-options>
-shortdesc = mispapireport is a wrapper to call misp api endpoint /attributes/restSearch with the same options as direct calls.
-description = mispapireport searches in MISP instance \
-  Another MISP instance from lookups\misp_instances.csv can be used with field misp_instance \
-  or misp_url URL with misp_key checking the certificate or not (misp_verifycert).\
-  There are 2 request modes \
-  1 - either you set requestmode=p (default) and then you pass additional params \
-  You can use almost all available options to build the request\
-  i.e "page", "limit", "value", "type", "category", "org", "tags" (and "not_tags"),\
-  "date_from", "date_to", "last", "eventid", "uuid", "enforceWarninglist", "to_ids"\
-  "deleted", "includeEventUuid", "includeEventTags", "threat_level_id", "eventinfo"\
-  2 - or you set requestmode=j and then you pass a complete valid JSON request \
-  using json="JSON request". Some entries will be enforced \
-  "returnFormat": "json" "withAttachments": "false" \
-  and it returns a JSON dataset. Dict items are displayed as columns misp_*
-
-example1 = | mispapireport last=100d
-comment1 = retrieve attributes of all events published in last 100 days.
+[mispgetevent-command]
+syntax = |mispgetevent <mispgetevent-options> 
+shortdesc = retrieve events in misp instance. Must provide either option "eventid", "last" or "date_from".
+description = mispgetevent searches in misp instance (either the one defined in app setup or\
+  at misp_url with misp_key checking the certificate or not (misp_verifycert).\
+  You can filter on "category" or "type" of attributes, on attributes having the 'to_ids' flag\
+  or specific "tags" or "not_tags".\
+  You may display the attribute uuid (getuuid: default = false) or creating org (getorg: default=false)
 usage = public
+example1 = | mispgetevent last=10d
+comment1 = retrieve attributes of all events published in last 10 days.
+example2 = | mispgetevent last=10d category="Payload delivery,Network%" type=ip-dst onlyids=y
+comment2 = retrieve published in last 10 days attributes of type 'ip-dst' and categories 'Payload delivery' or starting by 'Network' and with the flag 'to_ids' set.
 related = misp
 tags = misp
 
-[mispapireport-options]
-syntax = requestmode=<p|j> eventid="<int>(,<int>)*" last=<int>dhm date_from=<string> date_to=<string> \
-to_ids=<bool> category=string type=string\
-tags=string  not_tags=string threat_level_id=<int> org=<string> value=<string> eventinfo=<string>\
-limit=<int> page=<int> uuid=<string> enforceWarninglist=<bool> deleted=<bool> includeEventUuid=<bool> includeEventTags=<bool>\
-misp_instance=<string> \
-misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<bool>
+[mispgetevent-options]
+syntax = misp_instance=<string> json_request=<string> eventid=<string> last=<string> date=<string> \
+  page=<int> limit=<int> type=<string> category=<string> tags=<string> not_tags=<string> \
+  getioc=<bool> pipesplit=<bool> published=<bool>
+description = mispgetevent searches in MISP instance \
+  Define your MISP instances as inputs. \
+  You can filter on 'category' or 'type' of attributes, or specific 'tags' or on contrary not having 'not_tags'.\
+  To return also attribute values, use getioc=True \
+  To split multivalue attributes into 2 fields set boolean pipesplit to True. \
+  For example domain|ip will be split into misp_domain and misp_ip \
+  but misp_type and misp_value will still have the original values \
+  limit is set by default to 1000.
