--- a/misp42splunk/default/savedsearches.conf
+++ b/misp42splunk/default/savedsearches.conf
@@ -96,16 +96,20 @@ display.visualizations.show = 0
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
 search = | mispgetioc misp_instance=default_misp last=1d geteventtag=t pipesplit=t type="filename,md5,sha1,sha256,sha512,ssdeep,filename|md5,filename|sha1,filename|sha256,filename|sha512,filename|ssdeep"\
-| eval description = "e" + misp_event_id + " on " + misp_filename + " hash(es):" \
-| eval description=if(isnotnull(misp_md5),description + "md5,",description)\
-| eval description=if(isnotnull(misp_sha1),description + "sha1,",description)\
-| eval description=if(isnotnull(misp_sha256),description + "sha256,",description)\
-| eval description=if(isnotnull(misp_sha512),description + "sha512,",description)\
-| eval description=if(isnotnull(misp_ssdeep),description + "ssdeep",description)\
-| eval file_hash=mvappend(misp_md5, misp_sha1, misp_sha256, misp_sha512, misp_ssdeep) | mvexpand file_hash\
+| eval description = "e"+ misp_event_id+ "_UUID_" + misp_event_uuid \
+| eval description=if(isnotnull(misp_filename),description  + " on " + misp_filename,description) \
+| eval description=if(isnotnull(misp_md5),description + " MD5,",description) \
+| eval description=if(isnotnull(misp_sha1),description + " SHA1,",description) \
+| eval description=if(isnotnull(misp_sha256),description + " SHA256,",description) \
+| eval description=if(isnotnull(misp_sha512),description + " SHA512,",description) \
+| eval description=if(isnotnull(misp_ssdeep),description + " SSEEEP",description) \
+| eval file_hash=mvappend(misp_md5, misp_sha1, misp_sha256, misp_sha512, misp_ssdeep)  \
+| eval file_hash=coalesce(file_hash,"preserve_single_value_file_hash") \
+| mvexpand file_hash \
+| eval file_hash=if(file_hash="preserve_single_value_file_hash", null(), file_hash) \
 | rename misp_filename AS file_name | where isnotnull(file_name) or isnotnull(file_hash) \
-| eval weight=case(match(misp_tag,"tlp:white"),20,match(misp_tag,"tlp:green"),40,match(misp_tag,"tlp:amber"),80,match(misp_tag,"tlp:red"),100,true(),50)\
-| where isnotnull(file_hash) or isnotnull(file_name) | fields description,file_hash,file_name,weight\
+| eval weight=case(match(misp_tag,"tlp:white"),20,match(misp_tag,"tlp:green"),40,match(misp_tag,"tlp:amber"),80,match(misp_tag,"tlp:red"),100,true(),50) \
+| fields description,file_hash,file_name,weight \
 | outputlookup misp_file_intel.csv
 
 [MISP_http_intel_last1d]
@@ -121,7 +125,8 @@ display.visualizations.show = 0
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
 search = | mispgetioc misp_instance=default_misp last=1d to_ids=t geteventtag=t type="url,user_agent"\
-| eval description = "MISP e" + misp_event_id | rename misp_user_agent AS http_user_agent, misp_url AS url\
+| eval description = "e"+ misp_event_id+ "_UUID_" + misp_event_uuid \
+| rename misp_user_agent AS http_user_agent, misp_url AS url\
 | eval weight=case(match(misp_tag,"tlp:white"),20,match(misp_tag,"tlp:green"),40,match(misp_tag,"tlp:amber"),80,match(misp_tag,"tlp:red"),100,true(),50)\
 | where isnotnull(url) or isnotnull(http_user_agent)| fields description,http_referrer,http_user_agent,url,weight\
 | outputlookup misp_http_intel.csv
@@ -139,9 +144,12 @@ display.visualizations.show = 0
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
 search = | mispgetioc misp_instance=default_misp last=1d to_ids=t geteventtag=t pipesplit=t type="domain,ip-dst,ip-src,domain|ip"\
-| eval description = "MISP e" + misp_event_id | rename misp_domain AS domain\
-| eval ip = mvappend(misp_ip_dst,misp_ip_src) |mvexpand ip\
+| eval description = "e"+ misp_event_id+ "_UUID_" + misp_event_uuid \
+| rename misp_domain AS domain\
+| eval ip = mvappend(misp_ip_dst,misp_ip_src)\
+| eval ip = coalesce(ip,"preserve_single_value_ip")\
+| mvexpand ip\
+| eval ip = if(ip="preserve_single_value_ip", null(), ip)\
 | eval weight=case(match(misp_tag,"tlp:white"),20,match(misp_tag,"tlp:green"),40,match(misp_tag,"tlp:amber"),80,match(misp_tag,"tlp:red"),100,true(),50)\
 | where isnotnull(ip) or isnotnull(domain) | fields description,domain,ip,weight\
 | outputlookup misp_ip_intel.csv
-
