Remove references to unusable event option
The to_ids option is shown in the mispgetevent command, but that option does not appear to be usable in the command.

--- a/misp42splunk/default/searchbnf.conf
+++ b/misp42splunk/default/searchbnf.conf
@@ -84,14 +84,13 @@ description = mispsight takes the value of fieldname and searches in MISP instan
 syntax = |mispgetevent <mispgetevent-options> 
 shortdesc = Retrieve events in MISP instance. Must provide either option "eventid", "last", "date_from" or "json_request".
 description = mispgetevent searches in MISP instance matching events\
-  You can filter on "category" or "type" of attributes, on attributes having the "to_ids" flag\
-  or specific "tags" or "not_tags".\
+  You can filter on "category" or "type" of attributes, or specific "tags" or "not_tags".\
   You may display the attribute uuid (getuuid: default=FALSE) or creating org (getorg: default=FALSE)
 usage = public
 example1 = | mispgetevent misp_instance=test last=10d
 comment1 = Retrieve events published in last 10 days.
-example2 = | mispgetevent misp_instance=test last=10d category="Payload delivery,Network%" type=ip-dst to_ids=TRUE
-comment2 = Retrieve events published in last 10 days with attributes of type 'ip-dst' and categories 'Payload delivery' or starting by 'Network' and with the flag "to_ids" set.
+example2 = | mispgetevent misp_instance=test last=10d category="Payload delivery,Network%" type=ip-dst
+comment2 = Retrieve events published in last 10 days with attributes of type 'ip-dst' and categories 'Payload delivery' or starting by 'Network'.
 related = misp
 tags = misp
 
