feature: mispgetioc support for decaying score added

--- a/package/default/searchbnf.conf
+++ b/package/default/searchbnf.conf
@@ -20,7 +20,8 @@ tags = misp
 syntax = misp_instance=<string> json_request=<string> eventid=<string> last=<string> date=<string> \
   page=<int> limit=<int> type=<string> category=<string> tags=<string> not_tags=<string> \
   warning_list=<bool> to_ids=<bool> include_deleted=<bool> expand_object=<bool> geteventtag=<bool> threat_level=<int> getuuid=<bool> \
-  getorg=<bool> pipesplit=<bool> add_description=<bool> output=<string>
+  getorg=<bool> pipesplit=<bool> add_description=<bool> output=<string> \
+  include_decay_score=<bool> decaying_model=<int> exclude_decayed=<bool> decay_score_threshold=<int>
 description = mispgetioc searches in MISP instance \
   Define your MISP instances as inputs. !!! limit is set by default to 1000. !!!\
   You can filter on "category" or "type" of attributes, on attributes having the "to_ids" flag\
