--- a/package/default/searchbnf.conf
+++ b/package/default/searchbnf.conf
@@ -113,3 +113,21 @@ tags = misp
 
 [misprest-options]
 syntax = misp_instance=<string> method=<string> target=<string> json_request=<string>
+
+##################
+# mispgetattribute
+##################
+[mispgetattribute-command]
+syntax = | mispgetattribute <mispgetattribute-options>
+shortdesc = Retrieve a single attribute by ID
+description = mispgetattribute returns a single attribute record if it exists.
+usage=public
+example1 = | mispgetattribute misp_instance=misp attributeid=1234
+comment1 = Returns all fields of the attribute with id 1234
+example2 = | eval attributeid=1234 | mispgetattribute misp_instance=misp fields=event_id,deleted
+comment2 = Returns field event_id and deleted of the attribute with id 1234
+related = misp
+tags = misp
+
+[mispgetattribute-options]
+syntax = misp_instance=<string> attributeid=<id> prefix=<string> fields=<field1,field2,...>
